objects/Campaign_Account_Members__c.object
<CustomObject>
    <description>Linking of accounts to campaigns for account based campaigns</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Campaign Member (Account)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns Targeting Account</relationshipLabel>
        <relationshipName>Campaigns_Targeting_Account</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Status__c</fullName>
        <label>Campaign Member Status</label>
        <picklist>
            <picklistValues>
                <fullName>Call Attempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converted to Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Contacted Yet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Account Members</relationshipLabel>
        <relationshipName>Campaign_Account_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cobalt_Consolidation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cobalt Consolidation ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Composite_ID__c</fullName>
        <description>campaign id + account id</description>
        <externalId>true</externalId>
        <label>Composite ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LeadID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores ID of the lead.</description>
        <inlineHelpText>Stores ID of the lead.</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Campaign Account Members</relationshipLabel>
        <relationshipName>Campaign_Account_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Leadsource__c</fullName>
        <label>Leadsource</label>
        <picklist>
            <picklistValues>
                <fullName>Incoming Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incoming Phone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep Initiated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OpportunityID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Campaign Account Members</relationshipLabel>
        <relationshipName>Campaign_Account_Members_Opp</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Campaign Account Member</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Campaign Account Members ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Account Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DS_SLS_CampaignMemberStatus_Req</fullName>
        <active>true</active>
        <description>Added per RQ-03116 to ensure the Campaign Member Status field has a value upon save</description>
        <errorConditionFormula>ISBLANK(TEXT(Campaign_Member_Status__c))</errorConditionFormula>
        <errorDisplayField>Campaign_Member_Status__c</errorDisplayField>
        <errorMessage>Please enter value for Campaign Member Status Field</errorMessage>
    </validationRules>
</CustomObject>